@@ -43,6 +43,9 @@
 	<LI>The default vertical alignment of images is "BOTTOM"
 	to match the HTML specification.
 
+	<LI>Paragraph spacing is only applied to the first table
+	after a paragraph.
+
 	<H3 _HD_OMIT_TOC>Bug Fixes</H3>
 
 	<LI>Switching between landscape and portrait orientations
